--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600&display=swap');
 
 * {
   margin: 0;
@@ -30,6 +30,9 @@ body {
 .test {
   background: rgba(97, 39, 17, 0.548);
   /* grid-row: auto */
+  filter: grayscale(80%);
+  color: rgba(197, 142, 38, 0.5);
+  color: #313131;
 }
 
 a {
