--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:700,800,900&display=swap');
 
 * {
   margin: 0;
